[tool.poetry]
name = "async-injector"
version = "0.1.0"
description = "Dependency injector for modern Python"
authors = ["Marcin Baczyński <dev@mail.of.ninja>"]
license = "BSD"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
